--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,7 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: Ferdinand Vandiveer Hayden and the Founding of the Yellowstone National Park
 url: http://www.gutenberg.org/ebooks/48110
